--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-    "name": "bash.origin.phantomjs",
-    "version": "0.0.0",
-    "repository": "https://github.com/bash-origin/bash.origin.phantomjs.git",
-    "bin": {
-        "bash.origin.phantomjs": "./bash.origin.phantomjs"
-    },
-    "scripts": {
-        "test": "sh ./test.sh"
-    }
+  "name": "bash.origin.phantomjs",
+  "version": "0.0.0",
+  "repository": "https://github.com/bash-origin/bash.origin.phantomjs.git",
+  "bin": {
+    "bash.origin.phantomjs": "./bash.origin.phantomjs"
+  },
+  "scripts": {
+    "test": "sh ./test.sh"
+  },
+  "dependencies": {
+    "bash.origin": "^0.1.30"
+  }
 }
